apps/ledger/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger
  labels:
    app: ledger
spec:
  selector:
    matchLabels:
      app: ledger
  template:
    metadata:
      annotations:
        rollout/nonce: "2025-09-20T13:33:00Z"
      labels:
        app: ledger
    spec:
      containers:
        - name: ledger
          image: ghcr.io/tinoosan/ledger
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
